src/styles/components/project.module.scss
@use '@/styles/_mixins' as *;
@use '@/styles/vars' as *;

.project {
  &__hero {
    position: relative;
    width: 100%;
    height: 772px;

    @include onMobile {
      height: 284px;
    }

    &-image {
      z-index: 0;
      max-height: 772px;
      @include onMobile {
        height: 284px;
      }

      filter: brightness(0.75);
    }

    &-text-container {
      position: absolute;
      bottom: 20%;
      color: white;
      padding: 0 20px;

      @include onLaptop {
        padding: 0 60px;
      }
    }

    &-title {
      font-size: 24px;
      line-height: 36px;
      font-weight: bold;

      @include onLaptop {
        font-size: 66px;
        line-height: 80px;
      }
    }

    &-subtitle {
      display: block;
      font-weight: normal;
      font-style: italic;

      @include onLaptop {
        font-size: 40px;
        line-height: 24px;
      }
    }
  }

  &__desc {
    font-size: 14px;
    line-height: 24px;
    text-align: center;
    font-weight: 600;
    margin: 20px;

    @include onLaptop {
      text-align: start;
      font-size: 60px;
      line-height: 80px;
    }
  }

  &__opt-desc {
    text-align: center;
    text-transform: uppercase;
    font-weight: 200px;
    font-size: 12px;
    line-height: 24px;
  }


}

